--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="<%= process.env.PUBLIC_PATH %>favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <%= htmlWebpackPlugin.tags.headTags %>
+    <!-- <%= htmlWebpackPlugin.tags.headTags %> -->
     <!--
         Notice the use of <%= process.env.PUBLIC_PATH %> in the tags above.
         It will be replaced with the URL of the `public` folder during the build.
@@ -29,7 +29,7 @@
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
-      <%= htmlWebpackPlugin.tags.bodyTags %>
+      <!-- <%= htmlWebpackPlugin.tags.bodyTags %> -->
   </body>
 
 </html>
